fixed bugs, area covered by popup

--- a/portfolio/src/main/resources/static/styles/pages/upload_popup.css
+++ b/portfolio/src/main/resources/static/styles/pages/upload_popup.css
@@ -15,4 +15,8 @@
     visibility: visible;
     top:50%;
     transform: translate(-50%, -50%) scale(1);
+    width: 100%;
+    height: 100%;
+    display: block ruby;
+    padding-top: 25%;
 }
